# tab-sim

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: docs-build.yaml  python-publish.yml  test.yml  test_local.yml
docs/: conf.py  config.rst  develop.rst  index.rst  modules.rst  output.rst  requirements.txt  usage.rst
examples/test/: sim_test_16A.yaml
tab_sim/: config.py  plot.py  tle.py  write.py
tab_sim/dask/: coordinates.py  interferometry.py  observation.py
tab_sim/jax/: coordinates.py  interferometry.py
tab_sim/scripts/: sim_vis.py  tle_sat_region.py
tabsim/: config.py  tle.py  write.py
tabsim/dask/: observation.py
tabsim/data/rfi/tles/: 2023-02-21-navstar.json  2024-01-15-ISS.json
tabsim/data/telescopes/: SKA-Low-AA*-Phase-1.itrf.txt  SKA-Low-AA*.itrf.txt  SKA-Low-AA0.5.itrf.txt  SKA-Low-AA1.itrf.txt  SKA-Low-AA2.itrf.txt  SKA-Low-AA4.itrf.txt  SKA-Low-Stations.ipynb  _telescopes.yaml
tabsim/jax/: coordinates.py  sgp4-full.py  sgp4-new.py  sgp4-test.py
tests/: test_sim-vis.py  test_tle_api.py
